# transcription_tdd_cpp

./: .clang-format  CMakeLists.txt  readme.md  todo.md
doc/: class.puml  seq.puml
include/: Bank.h  Currency.h  Dollar.h  Franc.h  Money.h  Rate.h
src/: CMakeLists.txt  Dollar.cpp  Franc.cpp  Money.cpp
test/: BankTest.cpp  CMakeLists.txt  DollarTest.cpp  FrancTest.cpp  MoneyTest.cpp  RateTest.cpp  main.cpp
